--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,14 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  display: absolute;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  z-index: 100;
+  margin: 200px;
 }
 
 .App-link {
